fix majority of remaining tslint warnings; update tslint to make most errors

--- a/src/app/common/paging/pageable-table/pageable-table.component.html
+++ b/src/app/common/paging/pageable-table/pageable-table.component.html
@@ -12,7 +12,7 @@
 				[maxPageSize]="pagingOptions?.pageSize"
 				[currentSize]="items?.length"
 				[disableGoToEnd]="disableGoToEnd"
-				(onChange)="onPageChange.emit($event)">
+				(pageChange)="pageChange.emit($event)">
 			</asy-pager>
 		</div>
 	</div>
@@ -60,7 +60,7 @@
 				[maxPageSize]="pagingOptions?.pageSize"
 				[currentSize]="items?.length"
 				[disableGoToEnd]="disableGoToEnd"
-				(onChange)="onPageChange.emit($event)">
+				(pageChange)="pageChange.emit($event)">
 			</asy-pager>
 		</div>
 	</div>
