--- a/src/app/core/admin/user-management/admin-list-users.component.html
+++ b/src/app/core/admin/user-management/admin-list-users.component.html
@@ -36,16 +36,16 @@
 							[hasItems]="hasUsers"
 							[pagingOptions]="pagingOpts"
 							[tableStriped]="true"
-							(onPageChange)="goToPage($event)">
+							(pageChange)="goToPage($event)">
 
-				<ng-template named-template="table-header">
+				<ng-template namedTemplate="table-header">
 					<th *ngFor="let header of headersToShow">
-						<sortable-table-header [header]="header" [currentSortField]="pagingOpts.sortField" [currentSortDir]="pagingOpts.sortDir" (onSortChange)="setSort($event)"></sortable-table-header>
+						<sortable-table-header [header]="header" [currentSortField]="pagingOpts.sortField" [currentSortDir]="pagingOpts.sortDir" (sortChange)="setSort($event)"></sortable-table-header>
 					</th>
 					<th>&nbsp;</th>
 				</ng-template>
 
-				<ng-template named-template="table-row" let-user let-i="index">
+				<ng-template namedTemplate="table-row" let-user let-i="index">
 					<td [hidden]="!columns.name.show">{{user.userModel.name}}</td>
 					<td [hidden]="!columns.username.show" style="min-width: 200px;max-width: 200px;"><div class="hide-overflow" style="max-width:400px;">{{user.userModel.username}}</div></td>
 					<td [hidden]="!columns._id.show">{{user.userModel._id}}</td>
@@ -93,13 +93,13 @@
 					</td>
 				</ng-template>
 
-				<ng-template named-template="table-no-results">
+				<ng-template namedTemplate="table-no-results">
 					<h2 class="text-center">
 						<small>No Users matched your search</small>
 					</h2>
 				</ng-template>
 
-				<ng-template named-template="table-no-data">
+				<ng-template namedTemplate="table-no-data">
 					<h2 class="text-center">
 						<small>No Users are available</small>
 					</h2>
