--- a/src/app/core/teams/list-teams/list-teams.component.html
+++ b/src/app/core/teams/list-teams/list-teams.component.html
@@ -16,15 +16,15 @@
 			</button>
 		</div>
 
-		<pageable-table [items]="teams" [pagingOptions]="pagingOptions" (onPageChange)="pageEvent$.next($event)" [loading]="loading">
+		<pageable-table [items]="teams" [pagingOptions]="pagingOptions" (pageChange)="pageEvent$.next($event)" [loading]="loading">
 
-			<ng-template named-template="table-header">
+			<ng-template namedTemplate="table-header">
 				<th *ngFor="let header of headers">
-					<sortable-table-header [header]="header" [currentSortField]="pagingOptions.sortField" [currentSortDir]="pagingOptions.sortDir" (onSortChange)="sortEvent$.next($event)"></sortable-table-header>
+					<sortable-table-header [header]="header" [currentSortField]="pagingOptions.sortField" [currentSortDir]="pagingOptions.sortDir" (sortChange)="sortEvent$.next($event)"></sortable-table-header>
 				</th>
 			</ng-template>
 
-			<ng-template named-template="table-row" let-team let-i="index">
+			<ng-template namedTemplate="table-row" let-team let-i="index">
 				<td>
 					<div>
 						<a [routerLink]="['/team', team._id]">{{ team.name }}</a>
@@ -38,7 +38,7 @@
 				</td>
 			</ng-template>
 
-			<ng-template named-template="empty-table">
+			<ng-template namedTemplate="empty-table">
 				<div>
 					<ng-container *ngIf="hasQuery; then empty_search else no_results"></ng-container>
 					<ng-template #empty_search>
