--- a/src/app/core/admin/end-user-agreement/admin-list-euas.component.html
+++ b/src/app/core/admin/end-user-agreement/admin-list-euas.component.html
@@ -14,26 +14,26 @@
 		</div>
 		<div class="col-md-10">
 			<div class="d-flex mb-3">
-				<asy-search-input placeholder="Search..." (applySearch)="onSearch($event)"></asy-search-input>
+				<asy-search-input placeholder="Search..." (applySearch)="searchEvent$.next($event)"></asy-search-input>
 				<button [routerLink]="['/admin/eua']" type="button" class="btn btn-primary ml-auto">
 					<span class="fa fa-plus"></span> Create EUA
 				</button>
 			</div>
 
-			<pageable-table [items]="euas"
-							[hasItems]="hasEuas"
-							[pagingOptions]="pagingOpts"
+			<pageable-table [items]="items"
+							[hasItems]="hasItems"
+							[pagingOptions]="pagingOptions"
 							[tableStriped]="true"
-							(pageChange)="goToPage($event)">
+							(pageChange)="pageEvent$.next($event)">
 
-				<ng-template namedTemplate="table-header">
+				<ng-template #tableHeader>
 					<th *ngFor="let header of headersToShow">
-						<sortable-table-header [header]="header" [currentSortField]="pagingOpts.sortField" [currentSortDir]="pagingOpts.sortDir" (sortChange)="setSort($event)"></sortable-table-header>
+						<sortable-table-header [header]="header" [currentSortField]="pagingOptions.sortField" [currentSortDir]="pagingOptions.sortDir" (sortChange)="sortEvent$.next($event)"></sortable-table-header>
 					</th>
 					<th>&nbsp;</th>
 				</ng-template>
 
-				<ng-template namedTemplate="table-row" let-eua let-i="index">
+				<ng-template #tableRow let-eua="item" let-i="index">
 					<td [hidden]="!columns._id.show">{{eua.euaModel._id}}</td>
 					<td [hidden]="!columns.title.show">
 						<div class="hide-overflow" style="max-width:400px;">{{eua.euaModel.title}}</div>
@@ -65,13 +65,13 @@
 					</td>
 				</ng-template>
 
-				<ng-template namedTemplate="table-no-results">
+				<ng-template #tableNoResults>
 					<h2 class="text-center">
 						<small>No EUAs matched your search</small>
 					</h2>
 				</ng-template>
 
-				<ng-template namedTemplate="table-no-data">
+				<ng-template #tableNoData>
 					<h2 class="text-center">
 						<small>No EUAs are available</small>
 					</h2>
