--- a/src/app/core/teams/list-team-members/list-team-members.component.html
+++ b/src/app/core/teams/list-team-members/list-team-members.component.html
@@ -10,15 +10,14 @@
 	<!-- Search Input -->
 	<search-table placeholder="Search team members..." (applySearch)="searchEvent$.next($event)"></search-table>
 
-	<pageable-table [items]="teamMembers" [pagingOptions]="pagingOptions" (pageChange)="pageEvent$.next($event)">
-
-		<ng-template namedTemplate="table-header">
+	<pageable-table [items]="items" [hasItems]="hasItems" [pagingOptions]="pagingOptions" (pageChange)="pageEvent$.next($event)">
+		<ng-template #tableHeader>
 			<th *ngFor="let header of headersToShow">
 				<sortable-table-header [header]="header" [currentSortField]="pagingOptions.sortField" [currentSortDir]="pagingOptions.sortDir" (sortChange)="sortEvent$.next($event)"></sortable-table-header>
 			</th>
 		</ng-template>
 
-		<ng-template namedTemplate="table-row" let-member>
+		<ng-template #tableRow let-member="item">
 			<!-- Name -->
 			<td>
 				<div>{{ member.userModel.name }}</div>
@@ -73,14 +72,16 @@
 			</td>
 		</ng-template>
 
-		<ng-template namedTemplate="empty-table">
-			<div *ngIf="hasSearch">
-				<h4>No team members matched your search</h4>
-			</div>
-			<div *ngIf="!hasSearch">
-				<h4>No Members?</h4>
-				<p>There are no members on this team. Read our <a [routerLink]="['/help/teams']">help page</a> for more details.</p>
-			</div>
+		<ng-template #tableNoResults>
+			<h2 class="text-center">
+				<small>No team members matched your search</small>
+			</h2>
+		</ng-template>
+
+		<ng-template #tableNoData>
+			<h2 class="text-center">
+				<small>There are no members on this team. Read our <a [routerLink]="['/help/teams']">help page</a> for more details.</small>
+			</h2>
 		</ng-template>
 
 	</pageable-table>
