--- a/src/app/core/teams/list-teams/list-teams.component.html
+++ b/src/app/core/teams/list-teams/list-teams.component.html
@@ -16,15 +16,14 @@
 			</button>
 		</div>
 
-		<pageable-table [items]="teams" [pagingOptions]="pagingOptions" (pageChange)="pageEvent$.next($event)" [loading]="loading">
-
-			<ng-template namedTemplate="table-header">
+		<pageable-table [items]="items" [hasItems]="hasItems" [pagingOptions]="pagingOptions" (pageChange)="pageEvent$.next($event)" [loading]="loading">
+			<ng-template #tableHeader>
 				<th *ngFor="let header of headers">
 					<sortable-table-header [header]="header" [currentSortField]="pagingOptions.sortField" [currentSortDir]="pagingOptions.sortDir" (sortChange)="sortEvent$.next($event)"></sortable-table-header>
 				</th>
 			</ng-template>
 
-			<ng-template namedTemplate="table-row" let-team let-i="index">
+			<ng-template #tableRow let-team="item" let-i="index">
 				<td>
 					<div>
 						<a [routerLink]="['/team', team._id]">{{ team.name }}</a>
@@ -38,18 +37,16 @@
 				</td>
 			</ng-template>
 
-			<ng-template namedTemplate="empty-table">
-				<div>
-					<ng-container *ngIf="hasQuery; then empty_search else no_results"></ng-container>
-					<ng-template #empty_search>
-						<h5>No Teams matched your search</h5>
-					</ng-template>
-					<ng-template #no_results>
-						<div>
-							<h4>No Teams Created</h4>
-						</div>
-					</ng-template>
-				</div>
+			<ng-template #tableNoResults>
+				<h2 class="text-center">
+					<small>No Teams matched your search</small>
+				</h2>
+			</ng-template>
+
+			<ng-template #tableNoData>
+				<h2 class="text-center">
+					<small>No Teams available</small>
+				</h2>
 			</ng-template>
 		</pageable-table>
 	</div>
