using async pipe to avoid manual subscription handling

--- a/src/app/common/system-alert/system-alert.component.html
+++ b/src/app/common/system-alert/system-alert.component.html
@@ -1,4 +1,4 @@
-<alert *ngFor="let alert of alerts; let i = index" [type]="alert.type" (close)="alertService.clear(i)" dismissible="true" >
+<alert *ngFor="let alert of alertService.alerts$ | async; let i = index" [type]="alert.type" (close)="alertService.clear(i)" dismissible="true" >
 	<table>
 		<tbody>
 		<tr>
