feat: Admin Page Updates
Conditionally add `user-role-external` class to role display in admin users page.  Allows alternate styling of external roles when roleStrategy=hybrid
Update order of admin tabs

--- a/src/app/core/admin/user-management/admin-list-users.component.html
+++ b/src/app/core/admin/user-management/admin-list-users.component.html
@@ -71,7 +71,11 @@
 
 					<td [hidden]="!columns.roles.show" style="max-width:200px;">
 						<ng-container *ngFor="let role of possibleRoles">
-							<div *ngIf="user.userModel.roles && user.userModel.roles[role.role]">
+							<div *ngIf="user.userModel.roles && user.userModel.roles[role.role]" class="user-role"
+								 [ngClass]="{
+									'user-role-external': user.userModel.localRoles && !user.userModel.localRoles[role.role]
+								}"
+							>
 								{{ role.role | titlecase }}
 							</div>
 						</ng-container>
